# sphinx-rst-table

./: .gitignore  Makefile  README.md  README.rst  noxfile.py  pyproject.toml  setup.py  tox.toml  translations.sh
.github/workflows/: ci.yaml  release.yaml
docs/: conf.py  configuration.rst  directives.rst  index.rst  roles.rst
sphinx_rst_table/: __init__.py  directives.py  domain.py  main.py
sphinx_rst_table/locales/: sphinx_rst_table.pot
sphinxcontrib/rst_table/: __init__.py  directives.py  domain.py  main.py
sphinxcontrib/rst_table/locales/: sphinxcontrib.rst_table.pot
tests/: conftest.py  test_columns_colspan.py  test_columns_header_rows.py  test_columns_headers.py  test_columns_rowspan.py  test_doc_example.py  test_doc_no_autonumber.py  test_doc_options_class.py  test_doc_short_example.py  test_error_columns.py  test_no_title.py  test_role_references.py  test_role_references_autonumber.py  test_table_index_de.py  util.py
tests/doc_test/doc_columns_colspan/: index.rst
tests/doc_test/doc_columns_header_rows/: conf.py  index.rst
tests/doc_test/doc_columns_headers/: Makefile  conf.py  index.rst
tests/doc_test/doc_columns_rowspan/: conf.py  index.rst
tests/doc_test/doc_error_columns/: index.rst
tests/doc_test/doc_example/: conf.py  index.rst
tests/doc_test/doc_no_autonumber/: conf.py
tests/doc_test/doc_no_title/: conf.py  index.rst
tests/doc_test/doc_options_class/: index.rst
tests/doc_test/doc_role_references/: index.rst  make.bat
tests/doc_test/doc_role_references_autonumber/: Makefile  index.rst
(+10 files in other folders)
