[project]
name = "sphinx-rst-table"
version = "26.1"
description = "Sphinx extension to create tables with normal Sphinx/ReST directives"
readme = "README.rst"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "team procitec", email = "info@procitec.de" },
]
keywords = ["sphinx", "documentation", "tables", "restructuredtext"]

[project.urls]
Repository = "https://github.com/procitec/sphinx-rst-table"
Documentation = "https://github.com/procitec/sphinx-rst-table/tree/main/docs"
Issues = "https://github.com/procitec/sphinx-rst-table/issues"

[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "lint" },
  { include-group = "docs" },
]
test = [
  "pytest>=8.0",
  "pytest-xdist>=3.5",
  "pyparsing!=3.0.4",
]
lint = [
  "ruff>=0.13",
]
docs = [
  "sphinx>=8.2",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "sphinx_rst_table"
module-root = ""
source-include = [
  "/docs/**",
  "/tests/**",
  "/tox.toml",
  "/Makefile",
  "/translations.sh",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--tb=long",
  "--log-level=DEBUG",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
